<resources>
    <string name="app_name">Sync</string>
    <string name="nav_header_title">Sync</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_message">Message</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_groups">Create Group</string>
    <string name="menu_notification">Notifications</string>
    <string name="save">Salva</string>
    <string name="notification_message_default">Ti ha Syncato</string>
    <string name="sync">Sync</string>
    <string name="accedi">Accedi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="non_sei_registrato">Non sei registrato?</string>
    <string name="registrati">Registrati</string>
    <string name="sign_up">Registrati</string>
    <string name="name">Nome</string>
    <string name="enter_email_address">Inserisci email</string>
    <string name="enter_age">Inserisci età</string>
    <string name="passwordSignUp">Password</string>
    <string name="check_password">Reinserisci password</string>
    <string name="sign_up_button">REGISTRATI</string>
    <string name="interessi">Topics:</string>
    <string name="persone_nelle_vicinanze">Persone nelle vicinanze</string>
    <string name="cerca">Search</string>
    <string name="inserisci_un_messaggio">Inserisci un messaggio</string>
    <string name="invia">Invia</string>

    <string name="interessi_string">Topics</string>
    <string name="filtri_string">Filtra:</string>
    <string name="group_details">Group Details</string>

    <string name="max_length_tag">20</string>
    <string name="max_length_message">200</string>
    <string name="max_length_email">64</string>
    <string name="max_length_password">100</string>

    <string name="email">Email</string>
</resources>